# agigea

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
doc/: CL-VECTORS.html
doc/CL-VECTORS_files/: crock.css
examples/: triangle.rs
src/: Gallery.md  Lib.md  alphamask.rs  base.rs  buffer.rs  cell.rs  clip.rs  color.rs  interp.rs  lib.rs  line_interp.rs  math.rs  outline.rs  outline_aa.rs  paths.rs  pixfmt.rs  ppm.rs  raster.rs  render.rs  scan.rs  stroke.rs  text.rs  transform.rs
src/pixfmt/: alpha_blend.rs  mod.rs  pixfmt.rs  tests.rs
tests/: aa_test.rs  component_rendering_000.rs  component_rendering_128.rs  component_rendering_255.rs  lion.rs  lion_cw.rs  lion_cw_aa.rs  lion_cw_aa_srgba.rs  lion_outline.rs  lion_outline_width1.rs  lion_png.rs  outline.rs  outline_aa.rs  rasterizers.rs  rasterizers2.rs  rasterizers2_pre.rs  rasterizers_gamma.rs  rounded_rect.rs  t00_example.rs  t01_rendering_buffer.rs  t02_pixel_formats.rs  t03_solar_spectrum.rs  t04_solar_spectrum_alpha.rs  t05_solar_spectrum_alpha.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t21_line_join.rs  t22_inner_join.rs  t23_font.rs  tests.rs
tests/std/: aa_test.rs  component_rendering_000.rs  component_rendering_128.rs  component_rendering_255.rs  lion.rs  lion_cw.rs  lion_cw_aa.rs  lion_cw_aa_srgba.rs  lion_outline.rs  lion_outline_width1.rs  lion_png.rs  mod.rs  outline.rs  outline_aa.rs  rasterizers.rs  rasterizers2.rs  rasterizers2_pre.rs  rasterizers_gamma.rs  rounded_rect.rs  t00_example.rs  t01_rendering_buffer.rs  t02_pixel_formats.rs  t03_solar_spectrum.rs  t11.rs  t12.rs  t13.rs  (+8 more)
