[package]
name = "agg"
version = "0.1.1"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2021"
repository = "https://github.com/savge13/agg"
documentation = "https://docs.rs/agg"
homepage = "https://github.com/savage13/agg"
license = "BSD-2-Clause"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"

[features]
default = ["alloc"]

std = ["alloc"]
alloc = []
no_std = []
safe = []
unsafe = []
nightly = []

text = ["std", "freetype-rs"]

docsrs = ["nightly", "std", "freetype-rs"]


[dependencies]
freetype-rs = { version = "0.32.0", optional = true }
# font-loader = "0.11.0"

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "gif", "pnm", "bmp", "jpeg"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]
